manifests/banking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: banking-service
  name: banking-service
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-service
  template:
    metadata:
      labels:
        app: banking-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/banka-1/banking-service:latest
          imagePullPolicy: Always
          name: banking-service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: banking-service
  name: banking-service
  namespace: banka-1
spec:
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app: banking-service
  type: ClusterIP
