manifests/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notification-service
  name: notification-service
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/banka-1/notification-service:latest
          imagePullPolicy: Always
          name: notification-service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notification-service
  name: notification-service
  namespace: banka-1
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: notification-service
  type: ClusterIP
