manifests/trading-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trading-service
  name: trading-service
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading-service
  template:
    metadata:
      labels:
        app: trading-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/banka-1/trading-service:latest
          imagePullPolicy: Always
          name: trading-service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trading-service
  name: trading-service
  namespace: banka-1
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: trading-service
  type: ClusterIP
