manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-1-ingress-api
  namespace: banka-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: banka-1.si.raf.edu.rs
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/api/user(/|$)(.*)"
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - pathType: ImplementationSpecific
            path: "/api/banking(/|$)(.*)"
            backend:
              service:
                name: banking-service
                port:
                  number: 8082
          - pathType: ImplementationSpecific
            path: "/api/trading(/|$)(.*)"
            backend:
              service:
                name: trading-service
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: "/api/support(/|$)(.*)"
            backend:
              service:
                name: support-service
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-1-ingress-frontend
  namespace: banka-1
spec:
  ingressClassName: nginx
  rules:
    - host: banka-1.si.raf.edu.rs
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
